feat: added pop-up menu

--- a/MainProject/MainProject/Components/Layout/MainLayout.razor
+++ b/MainProject/MainProject/Components/Layout/MainLayout.razor
@@ -1,6 +1,8 @@
-﻿@inherits LayoutComponentBase
+﻿@rendermode InteractiveServer
+@inherits LayoutComponentBase
 
 <PageTitle>My App</PageTitle>
+
 
 <main>
     @Body
