--- a/MainProject/MainProject/wwwroot/app.css
+++ b/MainProject/MainProject/wwwroot/app.css
@@ -1,4 +1,4 @@
-html, body {
+﻿html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     width: 100%;
     height: 100%;
@@ -112,4 +112,20 @@ h1:focus {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     overflow: hidden;
     font-size: 16px;
+}
+
+.dropdown-container {
+    position: relative;
+    display: inline-block;
+}
+
+.c {
+    background-color: white;
+    position: absolute;
+    top: 75px;
+    left: 2rem;
+    width: 250px;
+    height: 150px;
+    border-radius: 9px;
+    box-shadow: 4px 4px 10px rgba(0,0,0, 0.3);
 }
