--- a/MainProject/MainProject/wwwroot/app.css
+++ b/MainProject/MainProject/wwwroot/app.css
@@ -103,3 +103,13 @@ h1:focus {
     width: 50px;
     border: none;
 }
+.page {
+    width: 800px;
+    height: 1120px;
+    margin: 20px auto;
+    padding: 40px;
+    background: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    overflow: hidden;
+    font-size: 16px;
+}
