--- a/MainProject/AspNetCoreMVC/AspNetCoreMVC/Views/Home/Index.cshtml
+++ b/MainProject/AspNetCoreMVC/AspNetCoreMVC/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
+﻿@* Объявление модели для представления *@
+@model dynamic
+
+@* Блок C# кода для установки заголовка страницы *@
+@{
     ViewData["Title"] = "Home Page";
 }
 
+@* Заголовок страницы *@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @* Описание приложения *@
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
