--- a/MainProject/AspNetCoreMVC/AspNetCoreMVC/Views/Movies/Details.cshtml
+++ b/MainProject/AspNetCoreMVC/AspNetCoreMVC/Views/Movies/Details.cshtml
@@ -1,33 +1,45 @@
-﻿@model AspNetCoreMVC.Models.Movies
+﻿@* Объявление модели Movies, с которой работает представление *@
+@model AspNetCoreMVC.Models.Movies
 
+@* Блок C# кода для установки заголовка страницы *@
 @{
     ViewData["Title"] = "Details";
 }
 
+@* Заголовок страницы *@
 <h1>Details</h1>
 
+@* Контейнер для отображения деталей фильма *@
 <div>
     <h4>Movies</h4>
     <hr />
+    @* Определение списка для отображения свойств модели *@
     <dl class="row">
+        @* Отображение названия фильма *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
+
+        @* Отображение даты выпуска *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ReleaseDate)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
+
+        @* Отображение жанра *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Genre)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genre)
         </dd>
+
+        @* Отображение цены *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
@@ -36,7 +48,11 @@
         </dd>
     </dl>
 </div>
+
+@* Ссылки для редактирования и возврата к списку *@
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
+    @* Ссылка для редактирования текущего фильма *@
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
+    @* Ссылка для возврата к списку фильмов *@
     <a asp-action="Index">Back to List</a>
 </div>
