--- a/MainProject/AspNetCoreMVC/AspNetCoreMVC/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/MainProject/AspNetCoreMVC/AspNetCoreMVC/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,4 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+﻿@* Подключение библиотеки jQuery Validation для клиентской валидации *@
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+@* Подключение дополнительных методов валидации для jQuery Validation *@
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
