refactor: upper pannel

--- a/MainProject/MainProject/Components/Layout/UpperPanel.razor
+++ b/MainProject/MainProject/Components/Layout/UpperPanel.razor
@@ -1,21 +1,8 @@
 ﻿@using DropList
 @inherits LayoutComponentBase
+<div class="upper-panel">
+<PanelElements />
+</div>
 
-@* <header class="upper-panel">
-	<button class="button-menu" onclick="@dropList.click()">
-	</button>
-	<img class="separator-icon" src="Separator.png" alt="Separator">
-	<button class="button-save"></button>
-	<button class="button-undo"></button>
-	<button class="button-redo"></button>
 
-	@if (dropList.ShowDiv)
-	{
-		<div class="c"></div>
-	}
 
-</header> *@
-@Body
-@code {
-	
-}
