--- a/MainProject2/BlazorApp1/BlazorApp1/Pages/Login.razor.css
+++ b/MainProject2/BlazorApp1/BlazorApp1/Pages/Login.razor.css
@@ -61,3 +61,8 @@
     border: none;
     text-decoration: underline;
 }
+.text-message {
+    color: #6D7CFF;
+    text-align: center;
+    font-weight: bold;
+}
