--- a/MainProject/MVPv4/MVPv4/MVPv4.Client/Components/Test2.razor
+++ b/MainProject/MVPv4/MVPv4/MVPv4.Client/Components/Test2.razor
@@ -38,7 +38,7 @@ else
 
 @inject IHttpClientFactory HttpClientFactory
 @code {
-    private List<DTOdocumentV1> list;
+    private List<DTOdocumentV1>? list;
 
     private async Task GetData()
     {
