--- a/MainProject/MVPv5/MVPv5.Client/Pages/Login.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Login.razor
@@ -1,73 +1,41 @@
-﻿@* @page "/login"
-@using MVPv5.Login
-@inject HttpClient Http
-@inject NavigationManager NavigationManager
-@using System.Net.Http.Json
+﻿@page "/"
 
 <PageTitle>Login</PageTitle>
 
+<FormLoginRegistration CurrentPage="login" OnDataChanged="Handler" />
 
-<login-menu>
-    <div class="login-back">
-        <div class="login-main">
-            <p><NavigateToLogReg /></p>
+@* TODO - не работает *@
+@if(user1 != null)
+{
+    @user1.Nickname
+    @user1.Password
+}
 
-            <p><br><label class="label-format">Логин</label><input class="input-format-login" @bind="login" /><br></p>
-            <p><label class="label-format">Пароль</label><input class="input-format-password" @bind="password" /><br></p>
-            <br>
-            <br>
-            <p><button class="button-enter">Войти</button></p>
-            <p><button class="button-guest active" @onclick="NavigateToEditor">Войти как гость</button></p>
-        </div>
-    </div>
-</login-menu>
-
+@using MVPv5.Core.Models
+@inject ILogger<Login> Logger
 @code {
-    private string currentId { get; set; } = "login"; // Значение по умолчанию
-    private string login;
-    private string password;
-    private string message;
-    public class RegisterRequest
+    // [Parameter]
+    // public RenderFragment renderFragment;
+
+    private User? user1 = new();
+
+    protected override void OnInitialized()
     {
-        
+        Logger.LogWarning("Открыт Login");
     }
 
-    protected override async Task OnInitializedAsync()
+    private void Handler(User user)
     {
-        // Получаем параметры из URL
-        var uri = NavigationManager.ToAbsoluteUri(NavigationManager.Uri);
-        if (Microsoft.AspNetCore.WebUtilities.QueryHelpers.ParseQuery(uri.Query).TryGetValue("id", out var idValue))
-        {
-            currentId = idValue.FirstOrDefault() ?? "login"; // Используем значение из URL или значение по умолчанию
-        }
-        else
-        {
-            // Если параметра 'id' нет, устанавливаем значение по умолчанию и перенаправляем
-            NavigationManager.NavigateTo("?id=login", replace: true);
-        }
+        user1 = new() { Nickname = user.Nickname, Password = user.Password };
+        Logger.LogDebug($"Вошёл пользователь: {user.Nickname}");
+        Logger.LogError($"Вошёл: {user.Nickname}");
+        Logger.LogCritical($"Вошёл: {user.Nickname}");
+        Logger.LogInformation($"Вошёл: {user.Nickname}");
+        Logger.LogTrace($"Вошёл: {user.Nickname}");
+        Logger.LogWarning($"Вошёл: {user.Nickname}");
 
-        await base.OnInitializedAsync();
+        // StateHasChanged();
+
+        // TODO - не работает логгер
     }
-
-    // private void UpdateUrl()
-    // {
-    //     var uri = new Uri(Navigation.Uri);
-    //     var baseUri = uri.GetLeftPart(UriPartial.Path);
-    //     var newUri = $"{baseUri}?id={currentId}";
-    //     Navigation.NavigateTo(newUri);
-    // }
-
-
-    private void NavigateToEditor()
-    {
-        NavigationManager.NavigateTo("/Editor");
-    }
-    // private void Show()
-    // {
-    //     Console.Write(login);
-    // }
-
 }
-}
-
- *@
