--- a/MainProject/MVPv5/MVPv5.Client/Pages/Registration.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Registration.razor
@@ -2,4 +2,4 @@
 
 <PageTitle>Register</PageTitle>
 
-<NavigateToLogReg CurrentPage="registration" />
+<FormLoginRegistration CurrentPage="registration" />
