--- a/MainProject/MVPv5/MVPv5.Client/Pages/Editor.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Editor.razor
@@ -1,13 +1,14 @@
 ﻿@page "/editor"
 <PageTitle>Editor</PageTitle>
 
-
 <UpperToolbar />
+
+@* TODO - ввод данных вызывает ошибку и работает неожиданно: внутри страницы можно скроллить *@
 
 <div id="editor-container" style="overflow-y:auto; height: 100vh; background: #eee;">
     @foreach (var page in Pages)
     {
-        <div @ref="page.ElementRef" class="page" contenteditable="true" @oninput="CheckOverflow">
+        <div @ref="page.ElementRef" class="docpage" contenteditable="true" @oninput="CheckOverflow">
             <div>@(page.Content)</div>
         </div>
     }
@@ -21,12 +22,12 @@
 
     List<PageModel> Pages = new() { new PageModel() };
 
-    [Inject] IJSRuntime JS { get; set; }
+    [Inject] IJSRuntime? JS { get; set; }
 
     async Task CheckOverflow(ChangeEventArgs e)
     {
         var lastPage = Pages.Last();
-        bool isOverflowing = await JS.InvokeAsync<bool>("checkPageOverflow", lastPage.ElementRef);
+        bool isOverflowing = await JS!.InvokeAsync<bool>("checkPageOverflow", lastPage.ElementRef);
 
         if (isOverflowing)
         {
